Update index.html with additional links

--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
 <body>
     <ul>
         <li>
-            <a href="./eru.html">eruditio·aeterna</a> 
+            <a href="./eru.html">Eruditio·Aeterna</a> 
+            <a href="./jax.html">Jax·Goleft</a> 
+            <a href="./forest.html">Forest·Abundant</a> 
+            <a href="./talen.html">Talentem·Aperture</a> 
+            <a href="./ray.html">Raymond·Aperture</a> 
+   
         </li>
 
     </ul>
 </body>
+
 </html>
