--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="https://cdn.tailwindcss.com"></script>
     <title>Kate's note</title>
 </head>
 <body>
-    <ul>
+    <ul >
         <li>
             <a href="./eru.html">Eruditio·Aeterna</a> 
             <a href="./jax.html">Jax·Goleft</a> 
@@ -20,3 +21,4 @@
 </body>
 
 </html>
+
