--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Kate's note</title>
 </head>
 <body>
-    <ul flex  flex-col>
+    <ul class="flex  flex-col">
         <li>
             <a href="./eru.html">Eruditio·Aeterna</a> 
             <a href="./jax.html">Jax·Goleft</a> 
@@ -21,5 +21,6 @@
 </body>
 
 </html>
+
 
 
