Refactor HTML structure and update class names

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Kate's note</title>
 </head>
 <body>
-    <ul class="flex  flex-col">
+    <ul class="relative">
         <li>
             <a href="./eru.html">Eruditio·Aeterna</a> 
             <a href="./jax.html">Jax·Goleft</a> 
@@ -21,6 +21,7 @@
 </body>
 
 </html>
+
 
 
 
