--- a/index.html
+++ b/index.html
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="https://cdn.tailwindcss.com"></script>
-    <title>Kate's note</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://cdn.tailwindcss.com"></script>
+  <title>Kate's note</title>
 </head>
 <body>
-    <ul class="relative">
-        <li>
-            <a href="./eru.html">Eruditio·Aeterna</a> 
-            <a href="./jax.html">Jax·Goleft</a> 
-            <a href="./forest.html">Forest·Abundant</a> 
-            <a href="./talen.html">Talentem·Aperture</a> 
-            <a href="./ray.html">Raymond·Aperture</a> 
-   
-        </li>
-
-    </ul>
+    <h1>未瞑镇</h1>
+    <div class="">
+     <h2>角色</h2>
+        <ul class="relative list-disc pl-7">
+            <li><a href="./eru.html">Eruditio·Aeterna</a></li>
+            <li><a href="./jax.html">Jax·Goleft</a></li>
+            <li><a href="./forest.html">Forest·Abundant</a></li>
+            <li><a href="./talen.html">Talentem·Aperture</a></li>
+            <li><a href="./ray.html">Raymond·Aperture</a></li>
+        </ul>
+    </div>
+    <div class="">
+             <h2>大纲</h2>
+        <ol>
+            <li>
+                <a href="https://hungry-balaur-43b.notion.site/ver1-0-274c34c2ea4880428442f630b0d66e73?pvs=74">第一章 </a>
+            </li>
+        </ol>
+    </div>
 </body>
-
 </html>
-
-
-
-
