--- a/ray.html
+++ b/ray.html
@@ -1,1 +1,17 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>eruditio·aeterna</title>
+</head>
+<body>
+    <article>
+        <p>
+雷蒙德最初来镇里做牧师，并没有预想的那么失败，相反，处处谨慎，谦逊为人，不仅没有出大篓子，还获得了人们的亲切对待。他并没有向很多人表明他是为找兄弟而来的，就算从没能见到塔伦特姆的人影，他也想也许是他已经离开了，毕竟他就是那样的人。然而在调查镇内人口失踪问题时，他发现了塔伦特姆死亡的生命。坟墓，以及死亡名单上的记录。雷蒙德陷入了难以自持的悲伤中，不能够再工作，但他不愿意把事情的原委告诉人们，因为这样他会认为自己作为一个牧师是很不称职。他只把原委告诉了伊特纳牧师，因为她是她的工作搭档，有必要让她理解情况。他接受了伊特纳牧师的陪伴，对她诉说了很多与兄弟有关的事情。他理解了伊特纳牧师为什么不赞成他调查人口失踪的问题，一定是不想让自己知道塔伦特姆已死的事。不久后他参加伊特纳主持的礼拜，伊特纳讲了面对亲人离去的内容，说：既然他们已在天堂伴主左右，为何我们无法喜悦？也许我们悲伤的不是他们肉身的离去，而是明确知道我们说出的话，做出的行为无法再得到他们的回应，补救得不到感谢，忏悔得不到原谅，使我们痛苦的是我们仍留在人间。但，这种痛苦本身就是他们的回应，用情不自禁流下的泪水和内心的疼痛回应我们，他们已经受到了我们无声的想念。就像圣母的心也被利刃刺穿一样，这种痛苦是属灵的，是神赐予我们的与过世之人对话的渠道所以，“不必害怕”，就像天使在我们眼中也许可怖一样，恩典也以疼痛的形式降临。接受它，并心怀感激吧。雷蒙德深受感染，也似乎理解了为什么伊特纳牧师不苟言笑却能被人们所敬爱。
 
+ </p>
+    </article>
+    </body>
+
+</html>
