--- a/ray.html
+++ b/ray.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>eruditio·aeterna</title>
+    <title>Raymond·Aperture</title>
 </head>
 <body>
     <article>
